--- a/404.html
+++ b/404.html
@@ -3,33 +3,60 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Invalid Link</title>
+    <title>Oops! Page Not Found</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Comic Sans MS', cursive, sans-serif;
+            background: linear-gradient(135deg, #FF9A8B, #FEC75E);
+            color: #fff;
             text-align: center;
             padding: 50px;
-            background-color: #f8d7da;
-            color: #721c24;
+            margin: 0;
         }
         h1 {
-            font-size: 3em;
+            font-size: 4em;
+            color: #ff6f61;
+            text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
         }
         p {
-            font-size: 1.2em;
+            font-size: 1.5em;
+            color: #ffda77;
+            margin: 20px 0;
         }
         a {
-            color: #0056b3;
+            font-size: 1.2em;
+            color: #fff;
+            background-color: #ff6f61;
+            padding: 15px 30px;
+            border-radius: 10px;
             text-decoration: none;
+            transition: background-color 0.3s ease;
         }
         a:hover {
-            text-decoration: underline;
+            background-color: #ff9a8b;
+        }
+        .cartoon-img {
+            width: 250px;
+            height: auto;
+            margin-top: 30px;
+        }
+        .speech-bubble {
+            background-color: #fff;
+            color: #ff6f61;
+            padding: 15px;
+            border-radius: 10px;
+            display: inline-block;
+            max-width: 80%;
+            margin-top: 20px;
+            font-size: 1.2em;
+            box-shadow: 3px 3px 15px rgba(0, 0, 0, 0.1);
         }
     </style>
 </head>
 <body>
-    <h1>Oops! This page does not exist.</h1>
-    <p>The link you clicked on might be broken, or the page may have been removed.</p>
-    <p><a href="index.html">Go back to the homepage</a></p>
+    <h1>Oops! Page Not Found</h1>
+    <img src="https://www.pngkit.com/png/full/402-4026546_cartoon-404-error-png-cartoon-404-error.png" alt="Cartoon 404" class="cartoon-img">
+    <p class="speech-bubble">Uh-oh! It seems like the page you were looking for doesn't exist!</p>
+    <p><a href="/">Go back to the homepage</a></p>
 </body>
 </html>
