--- a/404.html
+++ b/404.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Oops! Page Not Found</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@700&family=Press+Start+2P&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: 'Comic Sans MS', cursive, sans-serif;
+            font-family: 'Roboto Slab', serif;
             background: linear-gradient(135deg, #FF9A8B, #FEC75E);
             color: #fff;
             text-align: center;
@@ -14,9 +15,10 @@
             margin: 0;
         }
         h1 {
+            font-family: 'Press Start 2P', cursive;
             font-size: 4em;
             color: #ff6f61;
-            text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+            text-shadow: 3px 3px 15px rgba(0, 0, 0, 0.3);
         }
         p {
             font-size: 1.5em;
@@ -31,12 +33,13 @@
             border-radius: 10px;
             text-decoration: none;
             transition: background-color 0.3s ease;
+            display: inline-block;
         }
         a:hover {
             background-color: #ff9a8b;
         }
         .cartoon-img {
-            width: 250px;
+            width: 300px;
             height: auto;
             margin-top: 30px;
         }
@@ -55,8 +58,8 @@
 </head>
 <body>
     <h1>Oops! Page Not Found</h1>
-    <img src="https://www.pngkit.com/png/full/402-4026546_cartoon-404-error-png-cartoon-404-error.png" alt="Cartoon 404" class="cartoon-img">
-    <p class="speech-bubble">Uh-oh! It seems like the page you were looking for doesn't exist!</p>
+    <img src="https://i.imgur.com/TsJpAFy.png" alt="Cartoon 404" class="cartoon-img">
+    <p class="speech-bubble">Uh-oh! Looks like the page you're looking for is lost in space!</p>
     <p><a href="/">Go back to the homepage</a></p>
 </body>
 </html>
