--- a/404.html
+++ b/404.html
@@ -57,9 +57,9 @@
     </style>
 </head>
 <body>
+        <img src="https://i.imgur.com/TsJpAFy.png" alt="Cartoon 404" class="cartoon-img">
     <h1>Oops! Page Not Found</h1>
     <img src="https://i.imgur.com/TsJpAFy.png" alt="Cartoon 404" class="cartoon-img">
-    <p class="speech-bubble">Uh-oh! Looks like the page you're looking for is lost in space!</p>
-    <p><a href="/">Go back to the homepage</a></p>
+        <p><a href="/">Go back to the homepage</a></p>
 </body>
 </html>
