--- a/404.html
+++ b/404.html
@@ -57,7 +57,7 @@
     </style>
 </head>
 <body>
-        <img src="https://i.imgur.com/TsJpAFy.png" alt="Cartoon 404" class="cartoon-img">
+        <img src="1000333809-removebg-preview.png" alt="Cartoon 404" class="cartoon-img">
     <h1>Oops! Page Not Found</h1>
          <p><a href="/">Go back to the homepage</a></p>
 </body>
