--- a/index.html
+++ b/index.html
@@ -3,70 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple Website</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
-            margin: 0;
-            padding: 0;
-        }
-        header {
-            background-color: #4CAF50;
-            color: white;
-            padding: 15px;
-            text-align: center;
-        }
-        nav {
-            text-align: center;
-            background-color: #333;
-        }
-        nav a {
-            color: white;
-            padding: 14px 20px;
-            text-decoration: none;
-            display: inline-block;
-        }
-        nav a:hover {
-            background-color: #ddd;
-            color: black;
-        }
-        .content {
-            padding: 20px;
-            text-align: center;
-        }
-        footer {
-            background-color: #333;
-            color: white;
-            text-align: center;
-            padding: 10px;
-            position: fixed;
-            width: 100%;
-            bottom: 0;
-        }
-    </style>
+    <title>DEATH SPIDER</title>
+    <link rel="stylesheet" href="style.css">
+    <link id="favicon" rel="icon" type="image/png" href="">
 </head>
 <body>
+    <canvas id="spider-web"></canvas> 
 
-<header>
-    <h1>Welcome to My Simple Website</h1>
-</header>
+    <header>
+        <h1>DEATH SPIDER</h1>
+    </header>
 
-<nav>
-    <a href="#">Home</a>
-    <a href="#">About</a>
-    <a href="#">Services</a>
-    <a href="#">Contact</a>
-</nav>
+    <main>
+        <section id="discord">
+            <h2>My Discord Profile</h2>
+            <div class="discord-container">
+                <img id="discord-avatar" src="" alt="Discord Avatar">
+                <div class="discord-info">
+                    <h3 id="discord-username">👤 Loading...</h3>
+                    <p id="discord-status">🔵 Checking status...</p>
+                    <p id="discord-custom-status">💬 Fetching custom status...</p>
+                    <p id="discord-activity">🎮 Activity: Loading...</p>
+                </div>
+            </div>
+        </section>
 
-<div class="content">
-    <h2>About This Website</h2>
-    <p>This is a simple HTML website to showcase basic structure and styling.</p>
-</div>
+        <section id="contact">
+            <h2>Contact Me</h2>
+            <p>Email: <a href="mailto:death@spiderr.fun">death@spiderr.fun</a></p>
+        </section>
+    </main>
 
-<footer>
-    <p>&copy; 2025 Simple Website. All Rights Reserved.</p>
-</footer>
+    <footer>
+        <p>© 2025 DEATH SPIDER. All rights reserved.</p>
+    </footer>
 
+    <script src="script.js"></script>
+    <script src="spider-web.js"></script> 
 </body>
 </html>
