--- a/404.html
+++ b/404.html
@@ -3,62 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Oops! Page Not Found</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@700&family=Press+Start+2P&display=swap" rel="stylesheet">
-    <style>
-        body {
-            font-family: 'Roboto Slab', serif;
-            background: linear-gradient(135deg, #FF9A8B, #FEC75E);
-            color: #fff;
-            text-align: center;
-            padding: 50px;
-            margin: 0;
-        }
-        h1 {
-            font-family: 'Press Start 2P', cursive;
-            font-size: 4em;
-            color: #ff6f61;
-            text-shadow: 3px 3px 15px rgba(0, 0, 0, 0.3);
-        }
-        p {
-            font-size: 1.5em;
-            color: #ffda77;
-            margin: 20px 0;
-        }
-        a {
-            font-size: 1.2em;
-            color: #fff;
-            background-color: #ff6f61;
-            padding: 15px 30px;
-            border-radius: 10px;
-            text-decoration: none;
-            transition: background-color 0.3s ease;
-            display: inline-block;
-        }
-        a:hover {
-            background-color: #ff9a8b;
-        }
-        .cartoon-img {
-            width: 300px;
-            height: auto;
-            margin-top: 30px;
-        }
-        .speech-bubble {
-            background-color: #fff;
-            color: #ff6f61;
-            padding: 15px;
-            border-radius: 10px;
-            display: inline-block;
-            max-width: 80%;
-            margin-top: 20px;
-            font-size: 1.2em;
-            box-shadow: 3px 3px 15px rgba(0, 0, 0, 0.1);
-        }
-    </style>
+    <title>404 - Page Not Found</title>
+    <link rel="stylesheet" href="style.css">
+    <link id="favicon" rel="icon" type="image/png" href="">
 </head>
 <body>
-        <img src="1000333809-removebg-preview.png" alt="Cartoon 404" class="cartoon-img">
-    <h1>Oops! Page Not Found</h1>
-         <p><a href="/">Go back to the homepage</a></p>
+    <canvas id="spider-web"></canvas> 
+
+    <header>
+        <h1>DEATH SPIDER</h1>
+    </header>
+
+    <main>
+        <section id="error">
+            <!-- Spider Image Above Error Message -->
+            <img src="spider.png" alt="Creepy Spider" class="error-image">
+            
+            <h2>⚠️ 404 - Page Not Found ⚠️</h2>
+            <p>It looks like you've wandered into a spider's web! 🕷️</p>
+
+            <!-- Home Button -->
+            <a href="index.html" class="home-button">🔙 Return to Home</a>
+        </section>
+    </main>
+
+    <footer>
+        <p>© 2025 DEATH SPIDER. All rights reserved.</p>
+    </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
